testdata/baselines/reference/submodule/compiler/expressionWithJSDocTypeArguments.errors.txt
expressionWithJSDocTypeArguments.ts(9,22): error TS1110: Type expected.
expressionWithJSDocTypeArguments.ts(14,29): error TS1110: Type expected.
expressionWithJSDocTypeArguments.ts(19,22): error TS1110: Type expected.
expressionWithJSDocTypeArguments.ts(24,29): error TS1110: Type expected.


==== expressionWithJSDocTypeArguments.ts (4 errors) ====
    // Repro from #51802
    
    function foo<T>(x: T): T { return x }
    
    class Bar<T> { constructor(public x: T) { } }
    
    // Errors expected on all of the following
    
    const WhatFoo = foo<?>;
                         ~
!!! error TS1110: Type expected.
    const HuhFoo = foo<string?>;
    const NopeFoo = foo<?string>;
    const ComeOnFoo = foo<?string?>;
    
    type TWhatFoo = typeof foo<?>;
                                ~
!!! error TS1110: Type expected.
    type THuhFoo = typeof foo<string?>;
    type TNopeFoo = typeof foo<?string>;
    type TComeOnFoo = typeof foo<?string?>;
    
    const WhatBar = Bar<?>;
                         ~
!!! error TS1110: Type expected.
    const HuhBar = Bar<string?>;
    const NopeBar = Bar<?string>;
    const ComeOnBar = Bar<?string?>;
    
    type TWhatBar = typeof Bar<?>;
                                ~
!!! error TS1110: Type expected.
    type THuhBar = typeof Bar<string?>;
    type TNopeBar = typeof Bar<?string>;
    type TComeOnBar = typeof Bar<?string?>;
    